--- a/dotfiles/.emacs.d/config.org
+++ b/dotfiles/.emacs.d/config.org
@@ -426,7 +426,7 @@ The Emacs dashboard package provides a nice dashboard when first starting up ema
                           (recents . 5)
                           (agenda . 5)))
   :config
-  (set-face-attribute 'dashboard-items-face nil :font "Fira Code Retina" :weight 'regular :height 140)
+  (set-face-attribute 'dashboard-items-face nil :font "Fira Code" :weight 'regular :height 140)
   (dashboard-setup-startup-hook))
 #+end_src
 
