--- a/dotfiles/.emacs.d/email.org
+++ b/dotfiles/.emacs.d/email.org
@@ -89,11 +89,34 @@ From here, I can continue onto configuring the ~mu4e~ emacs package.
         (lambda (msg)
           (cond
            ((member (car (mu4e-string-to-flags "T")) (mu4e-message-field msg :flags)) "/Trash")
+
+           ;; UCSC
+           ((mu4e-message-contact-field-matches msg :from "noreply@YuJa.com") "/UCSC")
            ((mu4e-message-contact-field-matches msg :from "no-reply@piazza.com") "/UCSC")
            ((mu4e-message-contact-field-matches msg :from "notifications@instructure.com") "/UCSC")
            ((mu4e-message-contact-field-matches msg :from "no-reply@gradescope.com") "/UCSC")
            ((mu4e-message-contact-field-matches msg :from "notification@edstem.org") "/UCSC")
+           ((mu4e-message-contact-field-matches msg :from "noreply@everbridge.net") "/UCSC")
+           ((mu4e-message-contact-field-matches msg :from ".*office.*@ucsc.edu") "/UCSC")
+           ((mu4e-message-contact-field-matches msg :from "madocast@ucsc.edu") "/UCSC")
+
+           ;; Finance
            ((mu4e-message-contact-field-matches msg :from "onlinebanking@ealerts.bankofamerica.com") "/Finance")
+           ((mu4e-message-contact-field-matches msg :from "no.reply.alerts@chase.com") "/Finance")
+           ((mu4e-message-contact-field-matches msg :from "noreply@robinhood.com") "/Finance")
+           ((mu4e-message-contact-field-matches msg :from "venmo@venmo.com") "/Finance")
+
+
+           ;; Packages/Shipping
+           ((mu4e-message-contact-field-matches msg :from "return@amazon.com") "/Packages")
+           ((mu4e-message-contact-field-matches msg :from "auto-confirm@amazon.com") "/Packages")
+           ((mu4e-message-contact-field-matches msg :from "order-update@amazon.com") "/Packages")
+           ((mu4e-message-contact-field-matches msg :from "shipment-tracking@amazon.com") "/Packages")
+           ((mu4e-message-contact-field-matches msg :from "safeway@p.safeway.com") "/Packages")
+           ((mu4e-message-contact-field-matches msg :from "cvs@cvs.narvar.com") "/Packages")
+
+           ;; Slug Security Club
+           ((mu4e-message-contact-field-matches msg :from "jinoh@ucsc.edu") "/Club")
            ((s-starts-with-p "[SlugSec" (mu4e-message-field msg :subject)) "/Club")
            (t "/Archive"))))
 
@@ -112,6 +135,7 @@ From here, I can continue onto configuring the ~mu4e~ emacs package.
           (:maildir "/Sent" :key ?s)
           (:maildir "/Trash" :key ?t)
           (:maildir "/Finance" :key ?f)
+          (:maildir "/Packages" :key ?p)
           (:maildir "/Club" :key ?c)
           (:maildir "/UCSC" :key ?u))))
 #+end_src
