--- a/dotfiles/.emacs.d/config.org
+++ b/dotfiles/.emacs.d/config.org
@@ -455,7 +455,8 @@ Ledger is a Unix program that implements a finance tracking system or /ledger/. 
   (setq ledger-reports `(("bal" ,(format "%%(binary) -f %s bal" ledger-master-file))
                          ("budget" ,(format "%%(binary) -f %s --budget -p 'this month' bal Expenses" ledger-master-file))
                          ("account" ,(format "%%(binary) -f %s reg %%(account)" ledger-master-file))
-                         ("monthly bal" ,(format "%%(binary) -f %s bal -p 'this month'" ledger-master-file)))))
+                         ("monthly bal" ,(format "%%(binary) -f %s bal -p 'this month'" ledger-master-file))
+                         ("daily bal" ,(format "%%(binary) -f %s bal -p 'today'" ledger-master-file)))))
 #+end_src
 
 ** Alert
