--- a/dotfiles/.emacs.d/email.org
+++ b/dotfiles/.emacs.d/email.org
@@ -101,6 +101,7 @@ From here, I can continue onto configuring the ~mu4e~ emacs package.
            ((mu4e-message-contact-field-matches msg :from ".*office.*@ucsc.edu") "/UCSC")
            ((mu4e-message-contact-field-matches msg :from "madocast@ucsc.edu") "/UCSC")
            ((mu4e-message-contact-field-matches msg :from "ucsc_ucues@ucop.edu") "/UCSC")
+           ((mu4e-message-contact-field-matches msg :from "ebeshear@ucsc.edu") "/UCSC")
 
            ;; Finance
            ((mu4e-message-contact-field-matches msg :from "onlinebanking@ealerts.bankofamerica.com") "/Finance")
