Apparently didn't save my switch from nextcloud to seafile

--- a/dotfiles/.emacs.d/org.org
+++ b/dotfiles/.emacs.d/org.org
@@ -247,7 +247,7 @@ Below is the main config for org-roam.
 (use-package org-roam
   :init (require 'org-roam-dailies)
   :custom
-  (org-roam-directory (file-truename "~/Nextcloud/org"))
+  (org-roam-directory (file-truename "~/Seafile/org"))
   (org-roam-node-display-template "${title:60} ${file-title}")
   :bind (("C-c n l" . org-roam-buffer-toggle)
          ("C-c n f" . jm/org-roam-find)
